starbucks-api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-starbucks-api-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: spring-starbucks-api

# apiVersion: v1
# kind: Service
# metadata:
#   name: spring-starbucks-api-service 
#   namespace: default
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     targetPort: 8080 
#   selector:
#     name: spring-starbucks-api
