starbucks-api/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-starbucks-api-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: spring-starbucks-api-service
      port:
        number: 80
